# Backend-project

./: .env.example  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8dff73715151_add_login_table.py  cb0ad0dbfb4b_create_students_table.py
config/: data_base.py
models/: student_model.py
routes/: login_router.py  student_router.py
utils/: util.py
validations/: validation.py
